# hands-on-llm-rag

./: README.md  hello.py  pyproject.toml
faiss_index/: index.faiss  index.pkl
root/data/: doc1.txt  doc2.txt
